# nscale

./: .autotools  .cproject  .gitignore  .project  CMakeLists.txt  DESCRIPTION_OF_OPERATIONS_nscale_library.doc  INSTALL_AND_COMPILE_nscale_library_in_Linux.docx  INSTALL_AND_COMPILE_nscale_library_in_Windows.docx  Makefile.am  README.segment  README.txt  ccmake-eclipse  configure  configure.ac  qsub-params.txt
scripts/: CMakeLists.txt  alltests.sh  build-fr-tree.sh  cciclus.test.sh  log1.txt  log2.txt  rm_duplicate_compute.sh  transport.tests.sh  yellowstone.test.sh
scripts/jaguar/: CMakeLists.txt  adios-coloc.sh.in  adios-separate.sh.in  adios.coloc.weak.submit.sh.in  adios.separate.weak.submit.sh.in  baseline.sh.in  baseline.weak.submit.sh.in  jaguar_submit.sh  jaguar_submit.sh.in  syntest.p10240.push.sh  syntest.p10240.sh  syntest.p5120.push.sh  syntest.p5120.sh  warmup.sh
scripts/keeneland/: CMakeLists.txt  adios-coloc.sh.in  adios-separate.sh.in  adios.coloc.weak.submit.sh.in  adios.separate.weak.submit.sh.in  baseline.sh.in  baseline.weak.submit.sh.in  capability.submit.sh.in  mpitest.p600.sh  syntest.p1200.push.sh  syntest.p1200.sh  syntest.p600.sh  syntest.p720.push.sh  syntest.p720.sh
scripts/mpi/: CMakeLists.txt  adios-coloc.sh.in  adios-separate.sh.in  baseline.sh.in  mpi_submit.sh.in
src/: CMakeLists.txt  Makefile.am
src/classify/: Makefile.am
src/common/: CMakeLists.txt  Debug.cpp  Debug.h  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  TypeUtils.h  h5utils.cpp  h5utils.h  time_win.h  waMPI.h
src/common/log-analysis/: .project  ExperimentVisualAnalysis.m  aggregatePerProc.m  aggregateRows.m  analyzeDir.m  analyzeTiming.m  averageTileComputeTimesDir.m  cci_common_filenameparser.pm  cci_common_filenameparser2.pm  checkDir.m  extractExperimentTimestamps.pl  extractExperimentTimestamps2.pl  extractSyntestTimingForExcelv1.pl  extractTimingForExcelv1.pl  extractTimingForExcelv2.pl  extractTimingForExcelv2ByEventTypes.pl  extractTimingForExcelv2ByNodeTypes.pl  filterEvents.m  fix_na-POSIX_logs.sh  plotProcEvents.m  printSummary.m  readLog.m  renderDir.m  replaceExperimentTiming.pl  resampleData.m  selectFields.m  summarize2.m  summarizeAcrossRowsGaussian.m  summarizeAggregateRows.m  summarizeByRow.m  summarizeFromIntermediate.m  summarizeThroughput.m  test.m  test2.m  testparse.csv  testparse2.csv  testparser.csv
src/common/matlab-timing-analysis/: aggregateProcesses.m  analyzeDir.m  analyzeTiming.m  analyzeTimingT1.m  analyzeTimingT2.m  analyzeTimingT3.m  analyzeTimingT4.m  filterProcesses.m  printSummary.m  readComputeAndIOTimingOneLineFormat.m  replaceExperimentTiming.perl  summarizeAcrossRowsGaussian.m  test.m  (+2 more)
src/dimreduc/: Makefile.am
src/execEngine/: .Makefile.swp  .ThreadPool.cpp.swp  CMakeLists.txt  ExecEngineConstants.h  ExecutionEngine.cpp  ExecutionEngine.h  Makefile  Makefile.inc  Task.cpp  Task.h  TasksQueue.cpp  TasksQueue.h  ThreadPool.cpp  ThreadPool.h
src/features/: Blob.cpp  Blob.h  CMakeLists.txt  Contour.cpp  Contour.h  CytoplasmCalc.cpp  CytoplasmCalc.h  DrawAuxiliar.cpp  DrawAuxiliar.h  ImageRegionNucleiData.cpp  ImageRegionNucleiData.h  ImageRegionNucleiDataGPU.cpp  ImageRegionNucleiDataIO.cpp  ImageRegionNucleiDataIO.h  Makefile  Makefile.am  MakefileKeenland.inc  MakefileTouro.inc  ObjFeatures.cpp  ObjFeatures.h  ObjFeaturesGPU.cpp  Operators.cpp  Operators.h  RegionalMorphologyAnalysis.cpp  RegionalMorphologyAnalysis.h  Test.cpp  TestBlob.cpp  TestRegional.cpp  cooc.cu  cudaToCInterface.cu  features.cpp
src/features-cpu/: Blob.cpp  Blob.h  CMakeLists.txt  Constants.h  Contour.cpp  Contour.h  DrawAuxiliar.cpp  Makefile  Makefile.inc  Operators.cpp  Operators.h  RegionalMorphologyAnalysis.cpp  RegionalMorphologyAnalysis.h
src/normalization/: CMakeLists.txt  Normalization.cpp  Normalization.h
src/pipeline/: CMakeLists.txt  Makefile  Makefile-cuda.inc  Makefile-mpi.ccicluster.inc  Makefile-mpi.inc  Makefile.ccicluster.inc  Makefile.inc  Makefile.keeneland.inc  datatypes.h  env.sh  featureExtractError  h5utils.cpp  h5utils.h  nu-features-by-image-mpi-bot.cpp  nu-features-by-image.cpp  nu-features-file-upgrade.cpp  nu-features-fix-mpi-bot.cpp  nu-features-fix.cpp  nu-features-kmeans.cpp  nu-features-mpi-bot.cpp  nu-features-sample-mpi-bot.cpp  nu-features-sample.cpp  nu-features-summarize-mpi-bot.cpp  nu-features-summarize.cpp  nu-features.cpp  nu-pipeline.cpp  nu-pipelineOMP.cpp  test.cpp
src/runtime/: Action_I.h  Activity.cpp  Activity.h  Activity_I.h  Assign.cpp  Assign.h  CMakeLists.txt  ClassHierarchy.txt  CmdlineParser.cpp  CmdlineParser.h  CmdlineParser_I.h  CommHandler_I.cpp  CommHandler_I.h  Communicator_I.cpp  Communicator_I.h  DataBuffer.cpp  DataBuffer.h  Debug.cpp  Debug.h  MPIDataBuffer.cpp  MPIDataBuffer.h  MPIRecvDataBuffer.cpp  MPIRecvDataBuffer.h  MPISendDataBuffer.cpp  MPISendDataBuffer.h  NullSinkAction.cpp  NullSinkAction.h  PeerCommHandler.cpp  PeerCommHandler.h  Process.cpp  Process.h  ProcessConfigurator_I.h  PullCommHandler.cpp  PullCommHandler.h  PushCommHandler.cpp  PushCommHandler.h  RandomScheduler.cpp  RandomScheduler.h  RootedCommHandler_I.cpp  RootedCommHandler_I.h  (+8 more)
src/runtime-examples/: CMakeLists.txt
src/segment/: CMakeLists.txt  CVImageIOUtils.h  ComponentLabel.cpp  ComponentLabel.h  ConnComponents.cpp  ConnComponents.h  FileUtils.cpp  FileUtils.h  HistologicalEntities.cpp  HistologicalEntities.h  HistologicalEntitiesGPU.cpp  ImageOperations.cpp  ImageOperations.h  Makefile  Makefile-Keene  Makefile-Keeneland  Makefile-Yellowstone  Makefile-cuda.ccicluster.inc  Makefile-cuda.inc  Makefile.am  Makefile.ccicluster.inc  Makefile.inc  Makefile.keeneland.inc  MorphologicOperation.cpp  MorphologicOperation.h  MorphologicOperations.cpp  MorphologicOperations.h  MorphologicOperationsGPU.cpp  NeighborOperations.cpp  NeighborOperations.h  NeighborOperationsGPU.cpp  PixelOperations.cpp  PixelOperations.h  PixelOperationsGPU.cpp  RedBloodCell.cpp  RedBloodCell.h  ScanlineOperations.cpp  ScanlineOperations.h  SegmentTask.cpp  SegmentTask.h  (+23 more)
src/tasks/: CMakeLists.txt
(+924 files in other folders)
