AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS="-Im4"

AM_DEFAULT_SOURCE_EXT = .cpp

lib_LTLIBRARIES = libnt_dimreduc.la

libnt_dimreduc_la_CFLAGS = $(HDF5_CFLAGS) $(OPENMP_CFLAGS)
libnt_dimreduc_la_CXXFLAGS = $(HDF5_CXXFLAGS) $(OPENMP_CXXFLAGS)
libnt_dimreduc_la_CPPFLAGS = $(HDF5_CPPFLAGS) 
libnt_dimreduc_la_LDFLAGS = $(HDF5_LDFLAGS) $(OPENMP_CXXFLAGS)
libnt_dimreduc_la_SOURCES = 

