AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS="-Im4"

AM_DEFAULT_SOURCE_EXT = .cpp

lib_LTLIBRARIES = libnt_features.la

libnt_features_la_CFLAGS = $(HDF5_CFLAGS) $(OPENMP_CFLAGS)
libnt_features_la_CXXFLAGS = $(HDF5_CXXFLAGS) $(OPENMP_CXXFLAGS)
libnt_features_la_CPPFLAGS = $(HDF5_CPPFLAGS) 
libnt_features_la_LDFLAGS = $(HDF5_LDFLAGS) $(OPENMP_CXXFLAGS)
libnt_features_la_SOURCES =

